# quantum-computing

./: .env.example  .gitignore  CLAUDE.md  LICENSE  Makefile  PRODUCT.md  README.md  amplify.yml  customHttp.yml  pyproject.toml
.github/workflows/: ci.yml
00-foundations/: GUIDE.md
00-foundations/notebooks/: 01-first-circuit.ipynb  02-single-qubit-gates.ipynb  03-multi-qubit-gates.ipynb  04-measurement-statistics.ipynb  05-circuit-composition.ipynb
00-foundations/scripts/: gate_library.py  state_visualization.py
00-prereqs/: GUIDE.md
00-prereqs/notebooks/: 01-python-numpy-warmup.ipynb  02-linear-algebra-for-quantum.ipynb  03-probability-and-measurement.ipynb  04-what-is-a-qubit.ipynb  05-dirac-notation-decoded.ipynb  06-bloch-sphere-playground.ipynb
00-prereqs/scripts/: check_prereqs.py
01-foundations/: GUIDE.md
01-foundations/notebooks/: 01-first-circuit.ipynb  02-single-qubit-gates.ipynb  03-multi-qubit-gates.ipynb  04-measurement-statistics.ipynb  05-circuit-composition.ipynb
01-foundations/scripts/: gate_library.py  state_visualization.py
01-hardware/: GUIDE.md
01-hardware/notebooks/: 01-device-discovery.ipynb  02-ionq-exploration.ipynb  03-iqm-exploration.ipynb  04-quera-analog.ipynb  05-simulator-comparison.ipynb  06-noise-and-errors.ipynb
01-hardware/scripts/: cost_estimator.py  device_status.py
02-algorithms/: GUIDE.md
02-algorithms/notebooks/: 01-deutsch-jozsa.ipynb  02-grovers-search.ipynb  03-qft.ipynb  04-qpe.ipynb  05-qaoa-maxcut.ipynb  06-amplitude-estimation.ipynb
02-algorithms/scripts/: oracles.py  variational_utils.py
02-hardware/: GUIDE.md
02-hardware/notebooks/: 01-device-discovery.ipynb  02-ionq-exploration.ipynb  03-iqm-exploration.ipynb  04-quera-analog.ipynb  05-simulator-comparison.ipynb  06-noise-and-errors.ipynb
02-hardware/scripts/: cost_estimator.py  device_status.py
03-algorithms/: GUIDE.md
03-algorithms/notebooks/: 01-deutsch-jozsa.ipynb  02-grovers-search.ipynb  03-qft.ipynb  04-qpe.ipynb  05-qaoa-maxcut.ipynb  06-amplitude-estimation.ipynb
03-algorithms/scripts/: oracles.py  variational_utils.py
03-quantum-ml/: GUIDE.md
03-quantum-ml/notebooks/: 01-data-encoding.ipynb  02-quantum-kernels.ipynb  03-variational-classifier.ipynb  04-pennylane-braket.ipynb  05-qnn-architecture.ipynb  06-barren-plateaus.ipynb  07-hybrid-ml-job.ipynb
03-quantum-ml/scripts/: classifiers.py  feature_maps.py  training.py
04-quantum-chemistry/: GUIDE.md
04-quantum-chemistry/notebooks/: 01-molecular-hamiltonians.ipynb  02-fermion-qubit-mapping.ipynb  03-vqe-h2.ipynb  04-vqe-lih.ipynb  05-ansatz-design.ipynb  06-active-space.ipynb  07-excited-states.ipynb  08-hybrid-chemistry-job.ipynb
04-quantum-chemistry/scripts/: vqe_runner.py
04-quantum-ml/: GUIDE.md
04-quantum-ml/notebooks/: 01-data-encoding.ipynb  02-quantum-kernels.ipynb  03-variational-classifier.ipynb  04-pennylane-braket.ipynb  05-qnn-architecture.ipynb  06-barren-plateaus.ipynb  07-hybrid-ml-job.ipynb
04-quantum-ml/scripts/: classifiers.py  feature_maps.py  training.py
05-hybrid-jobs/: GUIDE.md
05-hybrid-jobs/algorithms/: qaoa_maxcut_job.py  qml_training_job.py  vqe_chemistry_job.py
05-hybrid-jobs/containers/: Dockerfile
05-hybrid-jobs/notebooks/: 01-first-hybrid-job.ipynb  02-parametric-compilation.ipynb  03-monitoring-metrics.ipynb  04-checkpointing.ipynb  05-custom-containers.ipynb  (+2 more)
05-quantum-chemistry/: GUIDE.md
06-hybrid-jobs/: GUIDE.md
docs/: eval-implementation-plans.md  exercise-convention.md  feature-optimization.md  i18n-language-selector.md  ws6-implementation-plans.md
lib/: __init__.py  grading.py
lib/utils/: cost.py  (+4 more)
qcsim/: API.md  pyproject.toml
qcsim/src/qcsim/: __init__.py  circuits.py  devices.py
scripts/: build_tutor_corpus.mjs  gen-tutor-core.mjs  gen_cost_fixture.py  gen_gate_fixture.py  gen_h2_fixture.py  generate_notebooks.py  stage-monaco.mjs  validate_runnable.py
tests/: __init__.py  conftest.py  test_ansatz.py  test_circuits.py  test_classifiers.py  test_content_manifest.py  test_cost.py  test_cost_fixture.py  test_devices.py  test_exercise_checks.py  test_feature_maps.py  test_gate_fixture.py  test_grading.py  test_guide_runnable_fences.py  test_hamiltonians.py  test_lab_build_guards.py  test_notebook_contract.py  test_notebook_links.py  test_notebook_real_sdk.py  test_prereqs.py  test_pricing_prose.py  test_qcsim_parity.py  test_qpu_devices.py  test_results.py  test_statevector_helper.py  test_training.py  test_visualization.py  test_workspace_cognito.py
web/: .env.local  .gitignore  eslint.config.mjs  jest.config.ts  next.config.ts  package-lock.json  package.json  playwright.config.ts
(+648 files in other folders)
