[project]
name = "quantum-braket-workspace"
version = "0.1.0"
description = "Amazon Braket quantum computing learning workspace"
requires-python = ">=3.10"
dependencies = [
    "amazon-braket-sdk>=1.80",
    "amazon-braket-default-simulator>=1.25",
    "numpy>=1.26",
    "scipy>=1.12",
    "matplotlib>=3.8",
    "boto3>=1.34",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.5", "pip-tools>=7.0"]
full = [
    "pennylane>=0.38",
    "amazon-braket-pennylane-plugin>=1.30",
    "openfermion>=1.6",
    "openfermionpyscf>=0.5",
    "jupyterlab>=4.0",
]

[tool.setuptools.packages.find]
include = ["lib*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
