[project]
name = "quantum-braket-workspace"
version = "0.1.0"
description = "Amazon Braket quantum computing learning workspace"
requires-python = ">=3.10"
dependencies = [
    "amazon-braket-sdk>=1.80",
    "amazon-braket-default-simulator>=1.25",
    "numpy>=1.26",
    "scipy>=1.12",
    "matplotlib>=3.8",
    "boto3>=1.34",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "ruff>=0.5",
    "pip-tools>=7.0",
    "nbstripout>=0.7",
    # Notebook-contract test (tests/test_notebook_contract.py): execute every
    # browser-runnable notebook headlessly under qcsim. ipywidgets is bundled
    # by JupyterLite in the browser, so the local/CI test env needs it too.
    "nbclient>=0.10",
    "ipykernel>=6.29",
    "ipywidgets>=8.1",
]
full = [
    "pennylane>=0.38",
    "amazon-braket-pennylane-plugin>=1.30",
    "openfermion>=1.6",
    "openfermionpyscf>=0.5",
    "jupyterlab>=4.0",
]

[tool.setuptools.packages.find]
include = ["lib*"]

[tool.ruff]
line-length = 100
target-version = "py310"
# Notebooks are taught content with a standard import preamble; they are
# executed/validated by tests/test_notebook_contract.py, not linted as source.
extend-exclude = ["*.ipynb"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
