[project]
name = "qcsim"
version = "0.1.0"
description = "Pure-NumPy state-vector simulator that mirrors the Braket API subset used by this curriculum's notebooks. Designed to run inside Pyodide / JupyterLite."
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26",
]
readme = "API.md"
authors = [
    { name = "Quantum Workspace" },
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Physics",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["qcsim*"]
