[project]
name = "qcsim"
# Single-sourced from qcsim/src/qcsim/__init__.py:__version__ so the built wheel
# filename can never drift from what scripts/validate_runnable.py pins into the
# content manifest + JupyterLite config (a drift would 404 the in-browser wheel).
dynamic = ["version"]
description = "Pure-NumPy state-vector simulator that mirrors the Braket API subset used by this curriculum's notebooks. Designed to run inside Pyodide / JupyterLite."
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26",
]
readme = "API.md"
authors = [
    { name = "Quantum Workspace" },
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Physics",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = { attr = "qcsim.__version__" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["qcsim*"]
